[package]
name = "moshimoshi"
version = "0.1.0"
edition = "2021"
authors = ["iiYese iiyese@outlook.com"]
repository = "https://github.com/iiYese/moshimoshi"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "ecs", "ui", "callback", "macros"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11"
